--- a/design-principles.html
+++ b/design-principles.html
@@ -56,7 +56,7 @@
 </div>
     </main>
     <footer>
-        <h2>&copy;  &copy; <span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
+        <h2>&copy;<span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
             
         </h2>
     </footer>
