--- a/typography.html
+++ b/typography.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Point of the Mountain Chamber of Commerce</h1>
+        <h1>Herriman Chamber of Commerce</h1>
     </header>
     <nav class="topnav">
         <div><a href="index3.html">Home</a></div>
