Updated Footer Info on all pages

--- a/target-audience.html
+++ b/target-audience.html
@@ -35,5 +35,11 @@
             <li>How can I register my business for a permit at the farmers market?</li>
         </ul>
     </main>
+    <footer>
+        <h2> &copy; <span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
+            
+        </h2>
+    </footer>
+    <script src="js/currentdate.js"></script>
 </body>
 </html>
