--- a/color-scheme.html
+++ b/color-scheme.html
@@ -29,5 +29,11 @@
             <li>Header: #2c7e9e and #f7f7f7</li>
         </ul>
     </main>    
+    <footer>
+        <h2> &copy; <span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
+            
+        </h2>
+    </footer>
+    <script src="js/currentdate.js"></script>
 </body>
 </html>
