--- a/typography.html
+++ b/typography.html
@@ -28,5 +28,11 @@
             <li>Headings and footer: Times New Roman</li>
         </ul>
     </main>
+    <footer>
+        <h2> &copy; <span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
+            
+        </h2>
+    </footer>
+    <script src="js/currentdate.js"></script>
 </body>
 </html>
