--- a/typography.html
+++ b/typography.html
@@ -29,10 +29,10 @@
         </ul>
     </main>
     <footer>
-        <h2> &copy; <span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
-            
-        </h2>
+        <p>
+            &copy; <span id="year"></span> | Joe Burner | Utah  | <a class="link" href="https://www.byui.edu/online">BYUI Online Learning | Last Updated: <span id="currentdate"></span></a>
+         </p>        
     </footer>
-    <script src="js/currentdate.js"></script>
+    <script src="js/currentdate.js"></script>    
 </body>
 </html>
