Updated and cleaned up

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h2>Lesson Portal</h2> 
         <ul>
             <h2>Week 2 Lessons</h2>
-            <li><a href="design-principles.html"> Design principles</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson02/design-principles.html"> Design principles</a></li>
             <h2>Week 3 Lessons</h2>
-            <li><a href="index3.html">Website planning document</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson03/index3.html">Website planning document</a></li>
             <h2>Week 4 Lessons</h2>
             <li><a href="lesson10/">Week 4 Lesson</a></li>
             <h2>Week 5 Lessons</h2>
