Cleaned up and updated

--- a/lesson03/index3.html
+++ b/lesson03/index3.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <script src="scripts/date.js" defer></script>
+    <script src="scripts/currentdate.js" defer></script>
 </head>
 <body>
     <header>
