--- a/lesson03/index3.html
+++ b/lesson03/index3.html
@@ -21,7 +21,7 @@
         <div><a href="index3.html">Home</a></div>
         <div><a href="target-audience.html">Target Audience</a></div>   <div><a href="color-scheme.html">Color Scheme</a></div>
         <div><a href="typography.html">Typography</a></div>
-        <div><a href="https://mjburn0428.github.io/WDD230/">Lesson Portal</a></div>
+        <div><a href="https://mjburn0428.github.io/WDD230/index">Lesson Portal</a></div>
     </nav>
     <main>
         <h2>Site Purpose</h2>
