Updated for lesson 4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>Week 3 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson03/index3">Website planning document</a></li>
             <h2>Week 4 Lessons</h2>
-            <li><a href="lesson10/">Week 4 Lesson</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerece</a></li>
             <h2>Week 5 Lessons</h2>
             <li><a href="lesson10/">Week 5 Lesson</a></li>
             <h2>Week 6 Lessons</h2>
