--- a/chamber/chamber/index.html
+++ b/chamber/chamber/index.html
@@ -49,8 +49,8 @@
         <ul id="primaryNav">
           <li><a href="index.html">Main</a></li>
           <li><a href="discover.html">Discover</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Join</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/index">Directory</a></li>
         </ul>
       </nav>
 
