--- a/chamber/chamber/discover.html
+++ b/chamber/chamber/discover.html
@@ -48,9 +48,9 @@
         <ul id="primaryNav">
           <li><a href="index.html">Main</a></li>
           <li><a href="discover.html">Discover</a></li>
-          <li><a href="#">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Join</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
+          <li><a href="https://herriman.applicantpro.com/jobs/">Join</a>
+          </li>
         </ul>
       </nav>
       <div class="headerDate"></div>
