--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
-    <script src="js/script.js" defer></script>
+    <script src="js/current_date.js" defer></script>
   </head>
   <body>
     <header>
@@ -49,9 +49,8 @@
         <ul id="primaryNav">
           <li><a href="index.html">Main</a></li>
           <li><a href="discover.html">Discover</a></li>
-          <li><a href="#">Directory</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Join</a></li>
-          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
 
@@ -77,7 +76,7 @@
         <div class="weather">Weather</div>
         
         <div class="news">
-          <h3>Herriman History</h3>
+          <h2>Herriman History</h2>
           <picture>
             <img
               src="images/Herriman-utah.png"
@@ -155,7 +154,6 @@
       <div class="find-us">
         <h5 class="email">info@herrimancoc.gov</h5>
         <h5 class="phone">801-555-5555</h5>
-        <h5 class="map">Map Something Here</h5>
         <a href="https://www.google.com/maps/d/viewer?mid=1F9UdspojLAmefOus8B6J-j3_FWs&hl=en_US&ll=40.514699930209%2C-112.03158295805815&z=14">Herriman</a>
       </div>
 
