--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Herriman</title>
-
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
@@ -63,7 +62,8 @@
           class="discoverImg"
           data-src="images/fort-herriman.png"
       /></picture>
-      <div class="blurb">Fort Herriman</div>
+      <div class="blurb">
+        Fort Herriman (1854-1858) - A Mormon settler fort first established in 1854 by Thomas Butterfield, Henry Herriman, Samuel Egbert, Robert Petty and John Stocking. Abandoned in 1858 on orders from Brigham Young as Albert Sidney Johnston's Army approached.</div>
       <div class="blurb">Herriman Chapel early days</div>
       <picture class="discoverPic"
         ><img
