--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Herriman Chamber of Commerce" />
     <title>Herriman Chamber of Commerce</title>
+    <link rel="shortcut icon" href="images/favicon.jpg">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
