--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>Assignment Portal Sheet for Joe Burner</title>
-    <link rel="shortcut icon" href="images/favicon.gif">
+    <link rel="shortcut icon" href="images/favicon.png">
     <meta name="description" content="Assignemnt portal for Joe Burner in WDD 230: Web Frontend developement at BYU-Idaho">
     <link href="css/main.css" rel="stylesheet">
 </head>
