--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Week 4 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerece</a></li>
             <h2>Week 5 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/lesson05/BOM">BOM Top 25</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/lesson05/BOM.html">BOM Top 25</a></li>
             <h2>Week 6 Lessons</h2>
             <li><a href="lesson10/">Week 6 Lesson</a></li>
             <h2>Week 7 Lessons</h2>
