--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,8 +24,7 @@
         </picture>
       </div>
       <div class="headings">
-        <h1 class="headings1">Herriman</h1>
-        <h2 class="headings2">Chamber of Commerce</h2>
+        <h1 class="headings1">Herriman Chamber of Commerce</h1>
       </div>
 
       <div class="social" id="facebook">
@@ -62,7 +61,7 @@
         <div class="hero">
           <h2>Welcome to Herriman</h2>
           <picture>
-            <img src="images/Herriman-city.png" alt="Herriman City Hall" width="500" />
+            <img src="images/Herriman-city.png" alt="Herriman City Hall" width= "700" />
           </picture>
           <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.</p>
         </div>
@@ -70,7 +69,7 @@
           <h2>Herriman Happenings</h2>
           <picture>
             <img
-              src="images/black_ridge.png"alt="American flags in cemetery" width="300" />
+              src="images/black_ridge.png"alt="Black Ridge" width= 100% />
           </picture>
           <p> Black Ridge Resoivor. Come out for a fun community BBQ on Saturday October 22 2022 at 7pm. </p>
         </div>
@@ -82,7 +81,7 @@
             <img
               src="images/Herriman-utah.png"
               alt="Herriman Utah"
-              width="300"
+              width= 100%
             />
           </picture>
           <div>
@@ -98,8 +97,9 @@
         </div>
         <div class="spotlight">
           <div class="spot">
+            <h1>Top 3 Businesses in Herriman</h1>
             <picture>
-              <img src="images/fizz.png" alt="Fizz Herriman" width="250" />
+              <img src="images/fizz.png" alt="Fizz Herriman" width= "400" />
             </picture>
             <h3 class="spot-name">Fizz Drinks</h3>
             <p class="spot-description">
@@ -112,7 +112,7 @@
 
           <div class="spot">
             <picture>
-              <img src="images/up_house.png" alt="Real Up House" width="250" />
+              <img src="images/up_house.png" alt="Real Up House" width= 400 />
             </picture>
             <h3 class="spot-name">The Real Up House</h3>
             <p class="spot-description">The Real Up Housem from Disney's movie Up.</p>
@@ -120,7 +120,7 @@
           </div>
           <div class="spot" id="spot3">
             <picture>
-              <img src="images/farmer_market.PNG" alt="Farmers Market" width="250" />
+              <img src="images/farmer_market.PNG" alt="Farmers Market" width= 400 />
             </picture>
             <h3 class="spot-name">Herriman Farmers Market</h3>
             <p class="spot-description">Farmers Market for Herriman Utah.</p>
@@ -131,8 +131,9 @@
         </div>
         <div class="join">
           <h2>Employment Opportunities</h2>
-        <img src="images/Herriman-police.png" alt="employment" width="350" />
-        <p>Interested in working for the town of Herriman? Please click on join at the top to see current employment opprtunities within Herriman.</p>
+        <img src="images/Herriman-police.png" alt="employment" width= "500" />
+        <p>Are you looking for a career change? Interested in working for the town of Herriman? We have several opportunities awaiting you. Please click on join at the top to see current employment opprtunities within Herriman.</p>
+        <img src="images/herrimanpublic.png" alt="employment" width="500"
       </div>
     </main>
     <footer>
@@ -148,13 +149,13 @@
         <h4 class="logo-label">Herriman Chamber of Commerce</h4>
 
         <div class="address">
-          <h5 class="address1">5219 West Armada Way</h5>
-          <h5 class="address2">Herriman, UT 84096</h5>
+          <f5 class="address1">5219 West Armada Way</h5>
+          <f5 class="address2">Herriman, UT 84096</h5>
         </div>
       </div>
       <div class="find-us">
-        <h5 class="email">info@herrimancoc.gov</h5>
-        <h5 class="phone">801-555-5555</h5>
+        <f5 class="email">info@herrimancoc.gov</h5>
+        <f5 class="phone">801-555-5555</h5>
         <a href="https://www.google.com/maps/d/viewer?mid=1F9UdspojLAmefOus8B6J-j3_FWs&hl=en_US&ll=40.514699930209%2C-112.03158295805815&z=14">Herriman</a>
       </div>
 
