--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <picture>
-            <img src="images/jenny joe.png" alt="jenny joe" width="480" height="640">
+            <img src="images/jenny joe.png" alt="jenny joe" width= 100%>
         </picture>
         <h1>Joe Burner's Assignment Portal WDD 230</h1>
     </header>
