--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <meta name="description" content="Assignemnt portal for Joe Burner in WDD 230: Web Frontend developement at BYU-Idaho">
     <link href="css/main.css" rel="stylesheet">
+    <script src="js/current_date.js" defer></script>
 </head>
 <body>
     <header>
