Updated CSS and index typo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <picture>
-            <img src="images/jenny joe.png" alt="jenny joe" width= 50%>
+            <img src="images/jenny joe.png" alt="jenny joe" width="480" height="640">
         </picture>
         <h1>Joe Burner's Assignment Portal WDD 230</h1>
     </header>
@@ -27,7 +27,7 @@
             <h2>Week 3 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson03/index3">Website planning document</a></li>
             <h2>Week 4 Lessons</h2>
-            <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerece</a></li>
+            <li><a href="https://mjburn0428.github.io/WDD230/chamber/index">Chamber of Commerce</a></li>
             <h2>Week 5 Lessons</h2>
             <li><a href="https://mjburn0428.github.io/WDD230/lesson05/bom">BOM Top 25</a></li>
             <h2>Week 6 Lessons</h2>
