--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,9 +48,9 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
           <li><a href="index.html">Main</a></li>
-          <li><a href="discover.html">Discover</a></li>
+          <li><a href="discover.html">Discover Herriman</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Join</a></li>
+          <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a></li>
         </ul>
       </nav>
 
@@ -64,6 +64,7 @@
             <img src="images/Herriman-city.png" alt="Herriman City Hall" width= "700" />
           </picture>
           <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.</p>
+          <p>We invite you to check us out and see the daily events happening in our community and within the town of Herriman.</p>
         </div>
         <div class="event">
           <h2>Herriman Happenings</h2>
@@ -73,16 +74,18 @@
           </picture>
           <p> Black Ridge Resoivor. Come out for a fun community BBQ on Saturday October 22 2022 at 7pm. </p>
         </div>
-        <div class="weather">Weather</div>
-        
-        <div class="news">
+        <div class="weather">Town Hall Meeting
+          <img src="images/town_hall.png" alt="Herriman Town Hall" width= 75% />
+              <p>Please join us for our community town hall meeting scheduled for Monday October 24 2022 at 7pm. You can also join via zoom as well. Click the link below.</p>
+              <button>
+                <a href="https://zoom.us/" /> Join Town Hall Meeting
+              </button>
+        </div>
+
+         <div class="news">
           <h2>Herriman History</h2>
           <picture>
-            <img
-              src="images/Herriman-utah.png"
-              alt="Herriman Utah"
-              width= 100%
-            />
+            <img src="images/Herriman-utah.png" alt="Herriman Utah" width= 100% />
           </picture>
           <div>
             Herriman was the first settlement in the spring of 1851 by Henry Harriman, Thomas Butterfield and John J. Stocking. These three men built a log cabin each, fenced some land, raised a crop and called their location Butterfield Settlement. They also made a mountain road up what they called Butterfield Canyon, where they found some timber. In the fall of 1853 the settlement was strengthened by the arrival of some twenty other families. This increased the population to 71 souls. The following year a fort, enclosing 21/2 acres of ground, was built of concrete as a protection against Indians, who stole several bands of horses and cattle from the settlers. In the spring of 1853 the settlement was abandoned because of Johnston Army troubles, but was reoccupied the same year when peace was restored. Shortly afterwards the present town site was surveyed and called Herriman in honor of Henry Harriman. Since then the population has increased slowly as scarcity of water has retarded the growth of the settlement to a great extent. Leadership in Herriman settlement was first held by Henry Harriman, next Thomas Butterfield and in 1855, McGee Harris, who took charge until 1858. Alexander F. Barron served until 1861, Henry Arnold until the spring of 1866. Ensign I Stocking for ten years until 1876. Reorganized on June 17, 1877, James Crane served until July 6, 1886 when he died. William C. Crump succeeded him until 1886, Robert Danzie in 1897, James S. Crane until June 1, 1906, Thomas Butterfield, 1916 Franklin T. Crane until Dec 31, 1930. 
@@ -107,16 +110,19 @@
             </p>
             <p class="spot-phone">801-432-7188</p>
             <p class="spot-location">13308 S 5600 W Herriman, UT 84096</p>
-            <a href="https://fiizdrinks.com/">Fizz Drinks</a>
+            <button>
+              <a href="https://fiizdrinks.com/">Fizz Drinks</a>
+            </button>
           </div>
-
           <div class="spot">
             <picture>
               <img src="images/up_house.png" alt="Real Up House" width= 400 />
             </picture>
             <h3 class="spot-name">The Real Up House</h3>
             <p class="spot-description">The Real Up Housem from Disney's movie Up.</p>
-            <a href="http://www.therealuphouse.com/">Book your photo shoot with the house from Up.</a>
+            <button>
+              <a href="http://www.therealuphouse.com/">Book your photo shoot with the house from Up.</a>
+            </button>
           </div>
           <div class="spot" id="spot3">
             <picture>
@@ -126,14 +132,19 @@
             <p class="spot-description">Farmers Market for Herriman Utah.</p>
             <p class="spot-phone">801-446-5323</p>
             <p class="spot-location">5373 Main Street Herriman, UT 84096</p>
-            <a href="https://www.herriman.org/farmers-marketplace">Herriman Farmers Market</a>
+            <button>
+              <a href="https://www.herriman.org/farmers-marketplace">Herriman Farmers Market</a>  
+            </button>
           </div>
         </div>
         <div class="join">
           <h2>Employment Opportunities</h2>
         <img src="images/Herriman-police.png" alt="employment" width= "500" />
         <p>Are you looking for a career change? Interested in working for the town of Herriman? We have several opportunities awaiting you. Please click on join at the top to see current employment opprtunities within Herriman.</p>
-        <img src="images/herrimanpublic.png" alt="employment" width="500"
+        <img src="images/herrimanpublic.png" alt="employment" width="500" />
+        <button>
+          <a href="https://herriman.applicantpro.com/jobs/">Join Us!</a>
+        </button>
       </div>
     </main>
     <footer>
