Fixed a few errors

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -70,7 +70,7 @@
           <h2>Herriman Happenings</h2>
           <picture>
             <img
-              src="images/black_ridge.png"alt="Black Ridge" width= 100% />
+              src="images/black_ridge.png" alt="Black Ridge" width= 500 />
           </picture>
           <p> Black Ridge Resoivor. Come out for a fun community BBQ on Saturday October 22 2022 at 7pm. </p>
         </div>
@@ -150,23 +150,20 @@
     <footer>
       <div class="logo">
         <picture>
-          <img
-            src="images/coclogo.jpg"
-            alt="Herriman Chamber of Commerce Logo"
-          />
+          <img src="images/coclogo.jpg" alt="Herriman Chamber of Commerce Logo" />
         </picture>
       </div>
       <div class="col2">
         <h4 class="logo-label">Herriman Chamber of Commerce</h4>
 
         <div class="address">
-          <f5 class="address1">5219 West Armada Way</h5>
-          <f5 class="address2">Herriman, UT 84096</h5>
+          <f5 class="address1">5219 West Armada Way</f5>
+          <f5 class="address2">Herriman, UT 84096</f5>
         </div>
       </div>
       <div class="find-us">
-        <f5 class="email">info@herrimancoc.gov</h5>
-        <f5 class="phone">801-555-5555</h5>
+        <f5 class="email">info@herrimancoc.gov</f5>
+        <f5 class="phone">801-555-5555</f5>
         <a href="https://www.google.com/maps/d/viewer?mid=1F9UdspojLAmefOus8B6J-j3_FWs&hl=en_US&ll=40.514699930209%2C-112.03158295805815&z=14">Herriman</a>
       </div>
 
