Updated CSS and added new images & weather

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,9 +46,9 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
           <li><a href="index.html">Main</a></li>
-          <li><a href="discover.html">Discover</a></li>
+          <li><a href="discover.html">Discover Herriman</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
-          <li><a href="https://herriman.applicantpro.com/jobs/">Join</a>
+          <li><a href="https://herriman.applicantpro.com/jobs/">Join Us</a>
           </li>
         </ul>
       </nav>
@@ -68,10 +68,7 @@
       <picture class="discoverPic"
         ><img
           src="images/herriman-history.png"
-          alt="Herriman History"
-          class="discoverImg"
-          data-src="images/herriman-history.png"
-      /></picture>
+          alt="Herriman History" class="discoverImg" data-src="images/herriman-history.png"/></picture>
       <picture class="discoverPic"
         ><img
           src="images/lost-house.png"
