--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,11 +66,11 @@
           <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.</p>
           <p>We invite you to check us out and see the daily events happening in our community and within the town of Herriman.</p>
           <picture>
-            <img src="images/herriman-city-hall.png" alt="Herriman City Hall Park" width="700" />
+            <img src="images/herriman-city-hall.webp" alt="Herriman City Hall Park" width="700" />
             <p>Herriman City Hall is where you will find all the public offices for the city of Herriman.</p>
           </picture>
           <picture>
-            <img src="images/herriman-overview.png" alt="Herriman overview" width="700" />
+            <img src="images/herriman-overview.webp" alt="Herriman overview" width="700" />
           </picture>
           <p>Herriman city overview. We have see a lot of new incoming residents moving to Herriman Utah. Within just 2 miles of shopping and dining, Herriman is sure growing.</p>
         </div>
@@ -99,7 +99,7 @@
          <div class="news">
           <h2>Herriman History</h2>
           <picture>
-            <img src="images/Herriman-utah.png" alt="Herriman Utah" width= 100% />
+            <img src="images/herriman-history.webp" alt="Herriman Utah" width= 100% />
           </picture>
           <div>
             <p>Herriman was the first settlement in the spring of 1851 by Henry Harriman, Thomas Butterfield and John J. Stocking. These three men built a log cabin each, fenced some land, raised a crop and called their location Butterfield Settlement. They also made a mountain road up what they called Butterfield Canyon, where they found some timber. In the fall of 1853 the settlement was strengthened by the arrival of some twenty other families. This increased the population to 71 souls. The following year a fort, enclosing 21/2 acres of ground, was built of concrete as a protection against Indians, who stole several bands of horses and cattle from the settlers. In the spring of 1853 the settlement was abandoned because of Johnston Army troubles, but was reoccupied the same year when peace was restored. Shortly afterwards the present town site was surveyed and called Herriman in honor of Henry Harriman. Since then the population has increased slowly as scarcity of water has retarded the growth of the settlement to a great extent. Leadership in Herriman settlement was first held by Henry Harriman, next Thomas Butterfield and in 1855, McGee Harris, who took charge until 1858. Alexander F. Barron served until 1861, Henry Arnold until the spring of 1866. Ensign I Stocking for ten years until 1876. Reorganized on June 17, 1877, James Crane served until July 6, 1886 when he died. William C. Crump succeeded him until 1886, Robert Danzie in 1897, James S. Crane until June 1, 1906, Thomas Butterfield, 1916 Franklin T. Crane until Dec 31, 1930.</p>
@@ -116,7 +116,7 @@
           <div class="spot">
             <h1>Top 3 Businesses in Herriman</h1>
             <picture>
-              <img src="images/fizz.png" alt="Fizz Herriman" width= "400" />
+              <img src="images/fizz.webp" alt="Fizz Herriman" width= "400" />
             </picture>
             <h3 class="spot-name">Fizz Drinks</h3>
             <p class="spot-description">
@@ -128,7 +128,7 @@
           </div>
           <div class="spot">
             <picture>
-              <img src="images/up_house.png" alt="Real Up House" width= 400 />
+              <img src="images/up_house.webp" alt="Real Up House" width= 400 />
             </picture>
             <h3 class="spot-name">The Real Up House</h3>
             <p class="spot-description">The Real Up Housem from Disney's movie Up.</p>
@@ -136,7 +136,7 @@
           </div>
           <div class="spot" id="spot3">
             <picture>
-              <img src="images/farmer_market.PNG" alt="Farmers Market" width= 400 />
+              <img src="images/farmer_market.webp" alt="Farmers Market" width= 400 />
             </picture>
             <h3 class="spot-name">Herriman Farmers Market</h3>
             <p class="spot-description">Farmers Market for Herriman Utah.</p>
@@ -147,9 +147,9 @@
         </div>
         <div class="join">
           <h2>Employment Opportunities</h2>
-        <img src="images/Herriman-police.png" alt="employment" width= "500" />
+        <img src="images/Herriman-police.webp" alt="employment" width= "500" />
         <p>Are you looking for a career change? Interested in working for the town of Herriman? We have several opportunities awaiting you. Please click on join us at the top to see current employment opprtunities within Herriman.</p>
-        <img src="images/herrimanpublic.png" alt="employment" width="500" />
+        <img src="images/herrimanpublic.webp" alt="employment" width="500" />
         <p>We offer excellent benefits with our opportunities within the City of Herriman.</p>
       </div>
     </main>
