Updated image sizes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,11 +78,11 @@
           <h2>Herriman Happenings</h2>
           <picture>
             <img
-              src="images/black_ridge.png" alt="Black Ridge" width= 500 />
+              src="images/black_ridge.png" alt="Black Ridge" width= 300/>
           </picture>
           <p> Black Ridge Resoivor. Come out for a fun community BBQ on Saturday October 22 2022 at 7pm. </p>
           <a href="https://zoom.us">
-          <img src="images/town_hall.png" alt="Herriman Town Hall" width= 75% />
+          <img src="images/town_hall.png" alt="Herriman Town Hall" width= 300 />
          </a>
          <p>Please join us for our community town hall meeting scheduled for Monday October 24 2022 at 7pm. You can also join via zoom as well. Click on the Town Hall Meeting image. 
          </p>      
@@ -99,7 +99,7 @@
          <div class="news">
           <h2>Herriman History</h2>
           <picture>
-            <img src="images/herriman-history.webp" alt="Herriman Utah" width= 100% />
+            <img src="images/Herriman-utah.webp" alt="Herriman Utah" width= 100% />
           </picture>
           <div>
             <p>Herriman was the first settlement in the spring of 1851 by Henry Harriman, Thomas Butterfield and John J. Stocking. These three men built a log cabin each, fenced some land, raised a crop and called their location Butterfield Settlement. They also made a mountain road up what they called Butterfield Canyon, where they found some timber. In the fall of 1853 the settlement was strengthened by the arrival of some twenty other families. This increased the population to 71 souls. The following year a fort, enclosing 21/2 acres of ground, was built of concrete as a protection against Indians, who stole several bands of horses and cattle from the settlers. In the spring of 1853 the settlement was abandoned because of Johnston Army troubles, but was reoccupied the same year when peace was restored. Shortly afterwards the present town site was surveyed and called Herriman in honor of Henry Harriman. Since then the population has increased slowly as scarcity of water has retarded the growth of the settlement to a great extent. Leadership in Herriman settlement was first held by Henry Harriman, next Thomas Butterfield and in 1855, McGee Harris, who took charge until 1858. Alexander F. Barron served until 1861, Henry Arnold until the spring of 1866. Ensign I Stocking for ten years until 1876. Reorganized on June 17, 1877, James Crane served until July 6, 1886 when he died. William C. Crump succeeded him until 1886, Robert Danzie in 1897, James S. Crane until June 1, 1906, Thomas Butterfield, 1916 Franklin T. Crane until Dec 31, 1930.</p>
@@ -116,7 +116,7 @@
           <div class="spot">
             <h1>Top 3 Businesses in Herriman</h1>
             <picture>
-              <img src="images/fizz.webp" alt="Fizz Herriman" width= "400" />
+              <img src="images/fizz.webp" alt="Fizz Herriman" width= 300 />
             </picture>
             <h3 class="spot-name">Fizz Drinks</h3>
             <p class="spot-description">
@@ -128,7 +128,7 @@
           </div>
           <div class="spot">
             <picture>
-              <img src="images/up_house.webp" alt="Real Up House" width= 400 />
+              <img src="images/up_house.webp" alt="Real Up House" width= 300 />
             </picture>
             <h3 class="spot-name">The Real Up House</h3>
             <p class="spot-description">The Real Up Housem from Disney's movie Up.</p>
@@ -136,7 +136,7 @@
           </div>
           <div class="spot" id="spot3">
             <picture>
-              <img src="images/farmer_market.webp" alt="Farmers Market" width= 400 />
+              <img src="images/farmer_market.webp" alt="Farmers Market" width= 300 />
             </picture>
             <h3 class="spot-name">Herriman Farmers Market</h3>
             <p class="spot-description">Farmers Market for Herriman Utah.</p>
