Adjusted image sizes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,16 +61,16 @@
         <div class="hero">
           <h2>Welcome to Herriman</h2>
           <picture>
-            <img src="images/Herriman-city.png" alt="Herriman City Hall" width= "700" />
+            <img src="images/Herriman-city.png" alt="Herriman City Hall" width= 700 />
           </picture>
           <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.</p>
           <p>We invite you to check us out and see the daily events happening in our community and within the town of Herriman.</p>
           <picture>
-            <img src="images/herriman-city-hall.webp" alt="Herriman City Hall Park" width="700" />
+            <img src="images/herriman-city-hall.webp" alt="Herriman City Hall Park" width= 700 />
             <p>Herriman City Hall is where you will find all the public offices for the city of Herriman.</p>
           </picture>
           <picture>
-            <img src="images/herriman-overview.webp" alt="Herriman overview" width="700" />
+            <img src="images/herriman-overview.webp" alt="Herriman overview" width= 700 />
           </picture>
           <p>Herriman city overview. We have see a lot of new incoming residents moving to Herriman Utah. Within just 2 miles of shopping and dining, Herriman is sure growing.</p>
         </div>
@@ -78,13 +78,13 @@
           <h2>Herriman Happenings</h2>
           <picture>
             <img
-              src="images/black_ridge.png" alt="Black Ridge" width= 300/>
+              src="images/black_ridge.png" alt="Black Ridge" width= 500/>
           </picture>
           <p> Black Ridge Resoivor. Come out for a fun community BBQ on Saturday October 22 2022 at 7pm. </p>
           <a href="https://zoom.us">
-          <img src="images/town_hall.png" alt="Herriman Town Hall" width= 300 />
+          <img src="images/town_hall.png" alt="Herriman Town Hall" width= 400 />
          </a>
-         <p>Please join us for our community town hall meeting scheduled for Monday October 24 2022 at 7pm. You can also join via zoom as well. Click on the Town Hall Meeting image. 
+         <p>Please join us for our community town hall meeting scheduled for Monday October 24 2022 at 7pm. You can also join via zoom as well. Click on the Town Hall Meeting image to join our community meetings every Tuesday at 7pm. 
          </p>      
         </div>
         
@@ -116,7 +116,7 @@
           <div class="spot">
             <h1>Top 3 Businesses in Herriman</h1>
             <picture>
-              <img src="images/fizz.webp" alt="Fizz Herriman" width= 300 />
+              <img src="images/fizz.webp" alt="Fizz Herriman" width= 200 />
             </picture>
             <h3 class="spot-name">Fizz Drinks</h3>
             <p class="spot-description">
@@ -128,7 +128,7 @@
           </div>
           <div class="spot">
             <picture>
-              <img src="images/up_house.webp" alt="Real Up House" width= 300 />
+              <img src="images/up_house.webp" alt="Real Up House" width= 200 />
             </picture>
             <h3 class="spot-name">The Real Up House</h3>
             <p class="spot-description">The Real Up Housem from Disney's movie Up.</p>
@@ -136,7 +136,7 @@
           </div>
           <div class="spot" id="spot3">
             <picture>
-              <img src="images/farmer_market.webp" alt="Farmers Market" width= 300 />
+              <img src="images/farmer_market.webp" alt="Farmers Market" width= 200 />
             </picture>
             <h3 class="spot-name">Herriman Farmers Market</h3>
             <p class="spot-description">Farmers Market for Herriman Utah.</p>
@@ -147,9 +147,9 @@
         </div>
         <div class="join">
           <h2>Employment Opportunities</h2>
-        <img src="images/Herriman-police.webp" alt="employment" width= "500" />
+        <img src="images/Herriman-police.webp" alt="employment" width= "400" />
         <p>Are you looking for a career change? Interested in working for the town of Herriman? We have several opportunities awaiting you. Please click on join us at the top to see current employment opprtunities within Herriman.</p>
-        <img src="images/herrimanpublic.webp" alt="employment" width="500" />
+        <img src="images/herrimanpublic.webp" alt="employment" width="400" />
         <p>We offer excellent benefits with our opportunities within the City of Herriman.</p>
       </div>
     </main>
