Updated styling and centered text

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,6 +59,7 @@
     <main>
       <div class="container">
         <div class="hero">
+          <div class="attention"><button id="banner"></button></div>
           <h2>Welcome to Herriman</h2>
           <picture>
             <img src="images/Herriman-city.png" alt="Herriman City Hall" width= 700 />
@@ -146,6 +147,7 @@
           </div>
         </div>
         <div class="join">
+          <button>Join Us!</button>
           <h2>Employment Opportunities</h2>
         <img src="images/Herriman-police.webp" alt="employment" width= "400" />
         <p>Are you looking for a career change? Interested in working for the town of Herriman? We have several opportunities awaiting you. Please click on join us at the top to see current employment opprtunities within Herriman.</p>
